<resources>
    <string name="app_name">Catalogue</string>
    <string name="movie_name">Movie Name</string>
    <string name="detail">Detail</string>
    <string name="Of_10">10</string>
    <string name="slash">/</string>
    <string name="sample_title">Aquaman</string>
    <string name="sample_description">A musician helps a young singer find fame as age and alcoholism send his own career into a downward spiral.</string>
    <string name="sample_year">2018</string>
    <string name="sample_genre">Action, Adventure,Fantasy </string>
    <string name="sample_playtime">2h 23min</string>
    <string name="director">Director : </string>
    <string name="year">Year \t\t\t\t\t\t: </string>
    <string name="genre">Genre : </string>
    <string name="duration">Duration \t\t: </string>
    <string name="language">Language</string>
    <string name="movie_nav">Movie</string>
    <string name="tvshow_nav">Tv Show</string>
    <string name="rating">Rating</string>

    
    <string-array name="movie_title">
        <item>A Star is Born </item>
        <item>Aquaman</item>
        <item>Avengers : Infinity War</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon : \nThe Hidden World</item>
        <item>Glass</item>
        <item>Spider-man : Into the Spider-Verse</item>
        <item>The Mule</item>
        <item>Venom</item>

    </string-array>


    <string-array name="movie_rating">
        <item>7.7</item>
        <item>7.9</item>
        <item>8.5</item>
        <item>8.0</item>
        <item>7.8</item>
        <item>7.9</item>
        <item>8.0</item>
        <item>8.2</item>
        <item>7.6</item>
        <item>8.2</item>

    </string-array>

<string-array name="movie_desc">
    <item>A musician helps a young singer find fame as age and alcoholism send his own career into a downward spiral</item>
    <item>Arthur Curry, the human-born heir to the underwater kingdom of Atlantis, goes on a quest to prevent a war between the worlds of ocean and land.</item>
    <item>The Avengers and their allies must be willing to sacrifice all in an attempt to defeat the powerful Thanos before his blitz of devastation and ruin puts an end to the universe.</item>
    <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
    <item>Foul-mouthed mutant mercenary Wade Wilson (AKA. Deadpool), brings together a team of fellow mutant rogues to protect a young boy with supernatural abilities from the brutal, time-traveling cyborg, Cable.</item>
    <item>When Hiccup discovers Toothless isn\'t the only Night Fury, he must seek The Hidden World, a secret Dragon Utopia before a hired tyrant named Grimmel finds it first.</item>
    <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities.</item>
    <item>Teen Miles Morales becomes Spider-Man of his reality, crossing his path with five counterparts from other dimensions to stop a threat for all realities.</item>
    <item>Earl Stone, a man in his eighties, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he\'s just signed on as</item>
    <item>A failed reporter is bonded to an alien entity, one of many symbiotes who have invaded Earth. But the being takes a liking to Earth and decides to protect it.</item>



</string-array>

    <string-array name="movie_director">
        <item>Bradley Cooper</item>
        <item>James Wan</item>
        <item>Anthony Ruso and Joe Ruso</item>
        <item>Steven Caple Jr </item>
        <item>David Leitch</item>
        <item>Dean Deblois</item>
        <item>M. Night Shyamalan</item>
        <item>Rodney Rothman</item>
        <item>Clint EastWood</item>
        <item>David Michelinie</item>
    </string-array>

    <string-array name="movie_year">

        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>

    <string-array name="movie_duration">
        <item>2h 16min</item>
        <item>2h 13min</item>
        <item>2h 29min</item>
        <item>2h 10min</item>
        <item>1h 59min</item>
        <item>1h 44min</item>
        <item>2h 9min</item>
        <item>1h 57min</item>
        <item>1h 57min</item>
        <item>1h 52min</item>

    </string-array>


    <string-array name="movie_genre">
        <item>Drama \nMusic \nRomance</item>
        <item>Action \nAdventure \nFantasy</item>
        <item>Action \nAdventure \nSci-Fi</item>
        <item>Drama</item>
        <item>Action \nAdventure \nComedy</item>
        <item>Action \nAdventure</item>
        <item>Thriller \nDrama \nSci-Fi</item>
        <item>Action \nAdventure \nComedy</item>
        <item>Animation \nAction \nAdventure</item>
        <item>Action \nSci-fi \nThriller</item>

    </string-array>

    <string-array name="movie_photo">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_themule</item>
        <item>@drawable/poster_venom</item>

    </string-array>

    <string-array name="tvshow_title">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>The Flash</item>
        <item>Gotham</item>
        <item>Grey\'s Anatomy</item>
        <item>Hanna</item>
        <item>Iron Fist</item>
        <item>Naruto Shippuden</item>
        <item>NCIS</item>
        <item>SuperGirl</item>

    </string-array>


    <string-array name="tvshow_rating">
        <item>7.6</item>
        <item>8.1</item>
        <item>7.8</item>
        <item>7.8</item>
        <item>7.6</item>
        <item>7.5</item>
        <item>6.5</item>
        <item>8.5</item>
        <item>7.8</item>
        <item>6.3</item>

    </string-array>
    <string-array name="tvshow_desc">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow."</item>
        <item>The Doom Patrol\’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence and to protect Earth from what they find.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel.</item>
        <item>Everyone knows the name Commissioner Gordon. He is one of the crime world\'s greatest foes, a man whose reputation is synonymous with law and order. But what is known of Gordon\'s story and his rise from rookie detective to Police Commissioner? What did it take to navigate the multiple layers of corruption that secretly ruled Gotham City, the spawning ground of the world\'s most iconic villains? And what circumstances created them – the larger-than-life persons who would become Catwoman, The Penguin, The Riddler, Two Face and The Joker?</item>
        <item>Follows the personal and professional lives of a group of doctors at Seattle\’s Grey Sloan Memorial Hospital.</item>
        <item>This thriller and coming-of-age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.</item>
        <item>Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny.</item>
        <item>Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru. After 2 and a half years Naruto finally returns to his village of Konoha, and sets about putting his ambitions to work, though it will not be easy, as He has amassed a few (more dangerous) enemies, in the likes of the shinobi organization Akatsuki.</item>
        <item>From murder and espionage to terrorism and stolen submarines, a team of special agents investigates any crime that has a shred of evidence connected to Navy and Marine Corps personnel, regardless of rank or position.</item>
        <item>Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism.</item>

    </string-array>

    <string-array name="tvshow_creator">
        <item>Greg Berlanti</item>
        <item>Jeremy Carver</item>
        <item>Greff Johns</item>
        <item>Bruno Heller</item>
        <item>Shonda Rhimes</item>
        <item>David Farr</item>
        <item>Scott Buck</item>
        <item>Masashi Kishimoto</item>
        <item>Don McGil</item>
        <item>Greg Berlanti</item>
    </string-array>

    <string-array name="tvshow_year">

        <item>2012</item>
        <item>2019</item>
        <item>2014</item>
        <item>2014</item>
        <item>2019</item>
        <item>2019</item>
        <item>2017</item>
        <item>2007</item>
        <item>2003</item>
        <item>2015</item>
    </string-array>

    <string-array name="tvshow_duration">
        <item>42 min</item>
        <item>60 min</item>
        <item>44 min</item>
        <item>43 min</item>
        <item>43 min</item>
        <item>50 min</item>
        <item>55 min</item>
        <item>25 min</item>
        <item>45 min</item>
        <item>42 min</item>

    </string-array>


    <string-array name="tvshow_genre">
        <item>Crime \nDrama \nMystery</item>
        <item>Sci-Fi \nFantasy \nAction</item>
        <item>Drama \nSci-Fi \nFantasy</item>
        <item>Drama \nCrime \nFantasy</item>
        <item>Drama</item>
        <item>Action \nAdventure \nDrama</item>
        <item>Action \nAdventure \nCrime</item>
        <item>Animation \nComedy \nDrama</item>
        <item>Action \nAdventure \nCrime</item>
        <item>Action \nAdventure \nSci-Fi</item>

    </string-array>

    <string-array name="tvshow_photo">
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_flash</item>
        <item>@drawable/poster_gotham</item>
        <item>@drawable/poster_grey_anatomy</item>
        <item>@drawable/poster_hanna</item>
        <item>@drawable/poster_iron_fist</item>
        <item>@drawable/poster_naruto_shipudden</item>
        <item>@drawable/poster_ncis</item>
        <item>@drawable/poster_supergirl</item>

    </string-array>

</resources>
